bynkc/tests/fixtures/positive/122_http_get_simple/src/greet.bynk
context greet

service api from http {
  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok("pong")
  }
}
