bynkc/tests/fixtures/negative/383_system_cron_needs_wire/src/ops/jobs.bynk
context ops.jobs
service ticker from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
